fix: erro de z-index

--- a/css/global.css
+++ b/css/global.css
@@ -29,11 +29,13 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
+  z-index: 11;
 }
 .btnFloat-compartilhar,.btnFloat-font,.btnFloat-top{
   position: fixed;
   bottom: 140px;
   right: 16px;
+  z-index: 11;
 }
 .tn-btnFloat{
   display: none;
